# Boardfish

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: app.js  index.html  save-worker.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: Icon.icns
src-tauri/src/: main.rs
