[package]
name = "canvas-app"
version = "0.1.0"
description = "Canvas App"
authors = []
license = ""
repository = ""
default-run = "canvas-app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7", features = [ "fs-write-file", "process-exit", "window-close", "fs-read-file", "fs-read-binary-file", "dialog-save", "dialog-open", "shell-open"] }
tokio = { version = "1", features = ["fs"] }
arboard = "3"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
base64 = "0.21"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
