[package]
name = "boardfish"
version = "0.4.6"
description = "Boardfish"
authors = []
license = ""
repository = ""
default-run = "boardfish"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["fs"] }
arboard = "3"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
base64 = "0.21"
url = "2"


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
