[package]
name = "boardfish"
version = "0.6.2"
description = "Boardfish"
authors = []
license = ""
repository = ""
default-run = "boardfish"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["fs"] }
arboard = "3"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
base64 = "0.21"
url = "2"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication"] }


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
